--- a/index.html
+++ b/index.html
@@ -1,12 +1,29 @@
 <!doctype html>
 <html lang="ar" dir="rtl">
 <head>
+  <link rel="icon" type="image/png" sizes="32×32" href="favicon.png">
+  <link rel="icon" type="image/png" sizes="192×192" href="favicon.png">
+  <link rel="apple-touch-icon" sizes="180×180" href="favicon.png">
+    
   <meta charset="utf-8" />
   <title>أبو خالد للخدمات الإلكترونية | تصاريح زواج ومعاملات حكومية</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <meta name="description" content="أبو خالد للخدمات الإلكترونية – إنجاز تصاريح الزواج، معاملات التجنيس، وتخليص المعاملات الحكومية إلكترونيًا في جميع مناطق المملكة العربية السعودية." />
+  <meta name="keywords" content="
+    تصاريح زواج,
+    معاملات حكومية,
+    ابوخالد للخدمات الكترونية,
+    بوابة ناجز,
+    تخليص معاملات,
+    انجاز معاملات,
+    انجاز تصاريح,
+    تصريح زواج,
+    خدمات الكترونيه سعوديه ,
+    خدمات السعودية,
+    ">
 
+  <meta name="author" content="ابو خالد">
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -23,8 +40,8 @@
     <div class="brand">
       <img src="logo.png" alt="شعار أبو خالد للخدمات الإلكترونية" class="logo">
       <div class="brand-text">
-        <h1>أبو خالد</h1>
-        <p>للخدمات الإلكترونية</p>
+        <h1>أبو خالد للخدمات الإلكترونيه</h1>
+        <p>تخليص معاملات</p>
       </div>
     </div>
 
@@ -42,18 +59,15 @@
   <div class="container hero-grid">
     <div class="hero-text">
       <h2>تصاريح زواج ومعاملات حكومية<br><span>إنجاز إلكتروني وأنت في مكانك</span></h2>
-
       <p>
         نقدم خدمات احترافية في استخراج موافقات الزواج، معاملات التجنيس،
         وتخليص المعاملات لدى الجهات الحكومية في جميع مناطق المملكة العربية السعودية.
       </p>
-
       <ul class="hero-points">
         <li>✔ فريق متخصص وخبرة في التعامل مع الجهات الرسمية</li>
         <li>✔ متابعة دقيقة حتى استكمال المتطلبات</li>
         <li>✔ سرية تامة للمعلومات</li>
       </ul>
-
       <a href="https://wa.me/966501728829?text=السلام%20عليكم،%20أرغب%20بالحصول%20على%20خدمة%20وأود%20معرفة%20المتطلبات." 
          class="btn-primary">
          تواصل عبر واتساب
@@ -76,28 +90,18 @@
 <section id="services" class="section">
   <div class="container">
     <h2 class="section-title">الخدمات</h2>
-
     <div class="cards">
       <div class="card">
         <h3>تصاريح الزواج</h3>
-        <p>
-          استخراج موافقات الزواج للسعوديين والسعوديات من داخل المملكة أو خارجها،
-          مع متابعة الطلب حتى استكمال جميع المتطلبات الرسمية.
-        </p>
+        <p>استخراج موافقات الزواج للسعوديين والسعوديات من داخل المملكة أو خارجها، مع متابعة الطلب حتى استكمال جميع المتطلبات الرسمية.</p>
       </div>
-
       <div class="card">
         <h3>معاملات التجنيس</h3>
-        <p>
-          تجهيز وتقديم ومتابعة معاملات التجنيس وفق الأنظمة المعتمدة لدى الجهات المختصة.
-        </p>
+        <p>تجهيز وتقديم ومتابعة معاملات التجنيس وفق الأنظمة المعتمدة لدى الجهات المختصة.</p>
       </div>
-
       <div class="card">
         <h3>تخليص المعاملات الحكومية</h3>
-        <p>
-          إنهاء المعاملات لدى الوزارات والدوائر الحكومية بكل احترافية وسرية.
-        </p>
+        <p>إنهاء المعاملات لدى الوزارات والدوائر الحكومية بكل احترافية وسرية.</p>
       </div>
     </div>
   </div>
@@ -107,25 +111,10 @@
 <section id="how" class="section section-alt">
   <div class="container">
     <h2 class="section-title">كيف ننجز معاملتك؟</h2>
-
     <div class="steps">
-      <div class="step">
-        <span>1</span>
-        <h3>تواصل معنا</h3>
-        <p>عبر واتساب وتوضيح نوع الخدمة المطلوبة</p>
-      </div>
-
-      <div class="step">
-        <span>2</span>
-        <h3>تجهيز المتطلبات</h3>
-        <p>نساعدك في تجهيز المستندات اللازمة بشكل صحيح</p>
-      </div>
-
-      <div class="step">
-        <span>3</span>
-        <h3>التقديم والمتابعة</h3>
-        <p>نقوم بتقديم الطلب ومتابعته حتى استكمال المتطلبات</p>
-      </div>
+      <div class="step"><span>1</span><h3>تواصل معنا</h3><p>عبر واتساب وتوضيح نوع الخدمة المطلوبة</p></div>
+      <div class="step"><span>2</span><h3>تجهيز المتطلبات</h3><p>نساعدك في تجهيز المستندات اللازمة بشكل صحيح</p></div>
+      <div class="step"><span>3</span><h3>التقديم والمتابعة</h3><p>نقوم بتقديم الطلب ومتابعته حتى استكمال المتطلبات</p></div>
     </div>
   </div>
 </section>
@@ -134,7 +123,6 @@
 <section id="why" class="section">
   <div class="container">
     <h2 class="section-title">لماذا أبو خالد؟</h2>
-
     <div class="why-grid">
       <div>✔ خبرة في التعامل مع الجهات الحكومية</div>
       <div>✔ إنجاز إلكتروني بدون تعقيد</div>
@@ -149,21 +137,9 @@
 <section id="faq" class="section section-alt">
   <div class="container">
     <h2 class="section-title">الأسئلة الشائعة</h2>
-
-    <details>
-      <summary>هل الخدمة متوفرة في جميع مناطق المملكة؟</summary>
-      <p>نعم، نقدم خدماتنا لجميع مناطق المملكة العربية السعودية إلكترونيًا.</p>
-    </details>
-
-    <details>
-      <summary>متى يتم الدفع؟</summary>
-      <p>يتم الدفع بعد استكمال المتطلبات المتفق عليها وبدء إجراءات التقديم الرسمية.</p>
-    </details>
-
-    <details>
-      <summary>هل تضمنون الموافقة؟</summary>
-      <p>القبول والرفض يعود للجهات الرسمية المختصة، ودورنا هو تجهيز الطلب ومتابعته وفق الأنظمة المعتمدة.</p>
-    </details>
+    <details><summary>هل الخدمة متوفرة في جميع مناطق المملكة؟</summary><p>نعم، نقدم خدماتنا لجميع مناطق المملكة العربية السعودية إلكترونيًا.</p></details>
+    <details><summary>متى يتم الدفع؟</summary><p>يتم الدفع بعد استكمال المتطلبات المتفق عليها وبدء إجراءات التقديم الرسمية.</p></details>
+    <details><summary>هل تضمنون الموافقة؟</summary><p>القبول والرفض يعود للجهات الرسمية المختصة، ودورنا هو تجهيز الطلب ومتابعته وفق الأنظمة المعتمدة.</p></details>
   </div>
 </section>
 
@@ -171,14 +147,34 @@
 <footer class="footer">
   <div class="container footer-inner">
     <p>© <span id="year"></span> أبو خالد للخدمات الإلكترونية — الرياض، المملكة العربية السعودية</p>
+
+    <!-- الخدمات المصغرة تحت الفوتر -->
+    <div class="footer-services">
+      <h2>خدماتنا</h2>
+      <div class="services-grid">
+        <div class="service-column">
+          <details><summary><h3>تصاريح زواج سعودي من أجنبية</h3></summary><p>إنهاء جميع الإجراءات الرسمية بسرعة.</p></details>
+          <details><summary><h3>تصاريح زواج أجنبي من سعودي</h3></summary><p>متابعة الطلب وفق الأنظمة المعتمدة.</p></details>
+          <details><summary><h3>كل أنواع تصاريح الزواج</h3></summary><p>تصاريح لجميع الحالات داخل وخارج المملكة.</p></details>
+          <details><summary><h3>إنجاز التصاريح إلكترونيًا</h3></summary><p>متابعة سريعة لجميع طلبات التصاريح.</p></details>
+          <details><summary><h3>خدمات إضافية في الزواج</h3></summary><p>توفير استشارات سريعة وإجراءات متقدمة.</p></details>
+          <details><summary><h3>متابعة المعاملات الزوجية</h3></summary><p>التأكد من استكمال جميع المستندات.</p></details>
+        </div>
+        <div class="service-column">
+          <details><summary>تخليص جميع المعاملات الحكومية</summary><p>متابعة جميع الإجراءات الرسمية بدقة وسرعة.</p></details>
+          <details><summary>معاملات التجنيس</summary><p>تقديم ومتابعة معاملات التجنيس إلكترونيًا.</p></details>
+          <details><summary>تخليص معاملات الوزارات</summary><p>إنهاء المعاملات بسرعة واحترافية.</p></details>
+          <details><summary>متابعة الطلبات الحكومية</summary><p>نضمن لك استكمال جميع المتطلبات.</p></details>
+          <details><summary>خدمات إضافية حكومية</summary><p>إجراءات خاصة وتسريع المعاملات المعقدة.</p></details>
+          <details><summary>إنجاز معاملات متنوعة</summary><p>تسهيل إنجاز جميع الإجراءات بسرعة.</p></details>
+        </div>
+      </div>
+    </div>
   </div>
 </footer>
 
 <!-- زر واتساب ثابت -->
-<a class="whatsapp-float"
-   href="https://wa.me/966501728829?text=السلام%20عليكم،%20أرغب%20بالحصول%20على%20خدمة%20وأود%20معرفة%20المتطلبات."
-   target="_blank"
-   aria-label="تواصل واتساب">
+<a class="whatsapp-float" href="https://wa.me/966501728829" target="_blank" aria-label="تواصل واتساب">
   <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="واتساب">
 </a>
 
