--- a/index.html
+++ b/index.html
@@ -1,9 +1,7 @@
 <!doctype html>
 <html lang="ar" dir="rtl">
 <head>
-  <link rel="icon" type="image/png" sizes="32×32" href="favicon.png">
-  <link rel="icon" type="image/png" sizes="192×192" href="favicon.png">
-  <link rel="apple-touch-icon" sizes="180×180" href="favicon.png">
+  <link rel="icon" href="/favicon.ico">
     
   <meta charset="utf-8" />
   <title>أبو خالد للخدمات الإلكترونية | تصاريح زواج ومعاملات حكومية</title>
